Mise en page footer

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -6,5 +6,6 @@
 /* Globals + composants */
 @import "./globals";
 @import "../components/Header/header";
+@import "../components/Footer/footer";
 @import "./home";
 @import "../components/Artisans/styles/artisan-card";
