Ajout de la section list sur la homepage

--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -1,13 +1,13 @@
 html,
 body {
     height: 100%;
+    font-family: "Graphik Trial", system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
 }
 
 body {
     font-family: var(--font-family-paragraph);
     font-size: var(--font-size-paragraph);
     font-weight: var(--font-weight-paragraph);
-    color: var(--color-font);
     background: #fff;
 }
 
