--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -46,7 +46,7 @@ h1.page-title{
 
     display: grid;
     grid-auto-flow: column;
-    grid-auto-columns: 75%;
+    grid-auto-columns: 30%;
     gap: 1rem;
 
     overflow-x: auto;
@@ -57,7 +57,18 @@ h1.page-title{
 }
 
 .tta-carousel__item {
+    width: 165px;
+    height: 156px;
     scroll-snap-align: start;
+    text-align: center;
+}
+
+.tta-card{
+    height: 156px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 
