--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -29,16 +29,22 @@ h1.page-title{
     color: var(--color-principal);
 }
 
+.topArtisan{
+    margin-left: 33px;
+}
 .Top {
     margin: 0;
     width: 100%;
-    padding-left: 33px;
+    // padding-left: 33px;
     padding-bottom: 10px;
 }
 
 .Top .separation{
     background-color: var(--color-valid);
+    margin-left: 33px;
 }
+
+
 
 /* Carousel "tuiles qui défilent" */
 
@@ -56,6 +62,8 @@ h1.page-title{
     -webkit-overflow-scrolling: touch;
 }
 
+
+
 .tta-carousel__item {
     width: 165px;
     height: 156px;
@@ -69,20 +77,114 @@ h1.page-title{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: var(--color-principal);
 }
+
+.tta-card h3{
+    color: var(--color-principal);
+    font-weight: 400;
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    background-color: var(--color-principal);
+    border-radius: 4px;
+}
+
+.tta-carousel{
+    display: none;
+}
+
+ol span{
+    display: none;
+}
+
+ol{
+    display: block;
+}
+
 
 
 /* Tablet */
 @media (min-width: 768px) {
+    .carousel{
+        display: none;
+    }
+
     .tta-carousel {
-        grid-auto-columns: 45%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .tta-carousel__item {
+        width: 230px;
+        height: 240px;
+    }
+
+    ol span{
+        display: none;
     }
 }
 
 /* Desktop */
 @media (min-width: 992px) {
+    
+    .list{
+        padding-left:0
+    }
 
-    .tta-carousel {
-        grid-auto-columns: 30%;
+    .list h1{
+        margin-top: 27px;
+        margin-bottom: 17px;
+    }
+
+    .list h2{
+        margin-bottom: 47px;
+    }
+
+    .page-title, .separation, .findArtisan, .topArtisan, .Top .separation{
+        margin-left: 111px;
+    }
+
+    .Top .separation{
+        margin-top: 44px;
+    }
+
+    ol{
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        margin-left: 0;
+        padding-left: 0;
+    }
+
+    li{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        background-color: var(--color-secondary);
+        width: 235px;
+        height: 235px;
+        padding-left: 25px;
+        padding-right: 43px;
+        padding-top: 22px;
+        border-radius: 10px;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    ol span{
+        display: block;
+    }
+    li span{
+        font-weight: 500;
+    }
+
+    li span::after {
+        content: "";
+        display: block;
+        width: 30px;
+        height: 6px;
+        background-color: var(--color-danger);
+        margin-bottom: 15px;
+        margin-top: 3px;
     }
 }
