Ajout de la page artisans avec la recherche effective

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -9,4 +9,6 @@
 @import "../components/Header/header";
 @import "../components/Footer/footer";
 @import "./home";
+@import "./artisansPage";
 @import "../components/Artisans/styles/artisan-card";
+@import "../components/Artisans/styles/artisan-card-result";
