Ajout de la page contact de l'artisan

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -12,3 +12,4 @@
 @import "./artisansPage";
 @import "../components/Artisans/styles/artisan-card";
 @import "../components/Artisans/styles/artisan-card-result";
+@import "./detailArtisanPage";
